--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,6 @@
         "php": ">=5.4.0"
     },
     "autoload": {
-        "psr-4": {"Asgard\\Http\\": "."}
+        "psr-4": {"Asgard\\Templating\\": "."}
     }
 }
