--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-	"name": "asgard/templating",
-	"license": "MIT",
-	"authors": [{
-		"name": "Michel Hognerud",
-		"email": "michel@hognerud.net"
-	}],
+    "name": "asgard/templating",
+    "version": "0.1.0",
+    "license": "MIT",
+    "authors": [{
+        "name": "Michel Hognerud",
+        "email": "michel@hognerud.net"
+    }],
     "require": {
         "php": ">=5.4.0"
     },
