--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "name": "asgard/templating",
-    "version": "0.1.0",
     "license": "MIT",
     "authors": [{
         "name": "Michel Hognerud",
@@ -11,5 +10,6 @@
     },
     "autoload": {
         "psr-4": {"Asgard\\Templating\\": "."}
-    }
+    },
+    "minimum-stability": "dev"
 }
