--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
     "require": {
         "php": ">=5.5.9"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^4.0"
+    },
     "autoload": {
         "psr-4": {"Asgard\\Templating\\": "."}
     },
